refactor: update configuration keys and model names for consistency